--- a/httpconnection/src/main/res/layout/activity_main.xml
+++ b/httpconnection/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:paddingTop="20dp"
             android:background="#99000000">
             <EditText
+                android:id="@+id/phoneNumberEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -54,6 +55,7 @@
                 android:layout_marginBottom="5dp"></View>
 
             <EditText
+                android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -93,6 +95,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
+                android:id="@+id/mainLoginButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
@@ -101,6 +104,7 @@
                 android:background="@drawable/buttonstyle"
                 android:text="Login"/>
             <Button
+                android:id="@+id/mainSignInButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="40dp"
