--- a/skill/src/main/res/layout/activity_main.xml
+++ b/skill/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     tools:context="com.zhengyuan.skill.MainActivity">
 
+    <include layout="@layout/activity_normal_toolbar" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,5 +29,30 @@
             android:textSize="15dip" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/TabLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TabLayout+Fragment实现底部导航" />
+
+    <Button
+        android:id="@+id/BottomNavigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BottomNavigationView + Fragment实现底部导航" />
+
+    <Button
+        android:id="@+id/BottomNavigationBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BottomNavigationBar+Fragment实现底部导航" />
+
+    <Button
+        android:id="@+id/popipwindow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="popipwindow" />
+
 
 </LinearLayout>
